_sass/_picture_list.scss
@import "lib";

.picture-list-item {
    margin-bottom: 2em;
}

.picture-list-picture {
    @include respond-to(handheld-screens) {
        margin: 8px auto;
        display: flex;
        justify-content: center;
    }
    @include respond-to(medium-screens) {
        float: left;
        margin-right: 16px;
    }
    @include respond-to(wide-screens) {
        float: left;
        margin-right: 16px;
    }
}

.picture-list-description h3 {
    @include respond-to(handheld-screens) {
        text-align: center;
    }
}

.picture-list-profile-picture {
    display: block;
    object-fit: cover;
    width: 250px;
    height: 250px;
    border-radius: 3%;
    border: 1px solid red;
    margin-bottom: 8px;
}

.staff-display-name {
    margin-bottom: 0px;
}

.staff-box-container {
    display: flex;
    flex-wrap: wrap;
}

.staff-box-spacer {
    width: 16px;
    height: 0px;
    flex-shrink: 0;
}

.staff-box-left-container {
    flex: 0 0 250px;
}

.staff-box-right-container {
    flex: 1 1 300px;
    min-width: 300px;
}

